# msp430_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  pubspec.yaml
.github/workflows/: deploy.yml
.run/: download_rust_emu debug.run.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/github/slimeistdev/msp430_emulator/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
buildscripts/: download_rust_emu.dart  linux.sh  windows.sh
extra_licenses/: SHARED_MIT
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ffi_bindings/: shmem.dart
lib/language_def/: md_syntax_highlighter.dart  msp430_lang.dart  tutor.dart
lib/navigation/: bottom_tabs.dart
lib/screens/: code_edit_screen.dart  execute_screen.dart  homescreen.dart  tabbed_editor_screen.dart  test_screens.dart
lib/state/: shmem.dart
lib/state/computer/: isolated_computer.dart  memory_section_provider.dart
lib/state/editor/: document.dart  highlighter.dart  input.dart
lib/utils/: async_utils.dart  extensions.dart  flags.dart
lib/widgets/: code_editor.dart  code_editor_old.dart  disassembly_view.dart  editor_view.dart  folding_container.dart  keypad.dart  md_documentation_card.dart  memory_view.dart  rebuilder.dart  register_list.dart  slide_divider.dart  tab_button.dart  text_buffer_view.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/shmem_ffi/: Cargo.toml
native/shmem_ffi/src/: lib.rs
packaging/cpack/: .gitignore  CMakeLists.txt  package.sh
packaging/deb/: .gitignore  build.sh
packaging/deb/msp430-emu/DEBIAN/: control  postinst  prerm
packaging/deb/msp430-emu/usr/lib/msp430-emu/: launch_both.sh
packaging/deb/msp430-emu/usr/share/applications/: msp430-emu-gui.desktop  msp430-emu.desktop
packaging/deb/msp430-emu/usr/share/metainfo/: io.github.techno-sam.msp430-emu.metainfo.xml
packaging/msix/: appxmanifest.xml  guide.txt
test/: widget_test.dart  widget_test_2.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
